Remove prestashop/module-lib-service dependency
Deleted the 'prestashop/module-lib-service' package from composer.json and updated Composer autoload and metadata files accordingly. This change removes the dependency and regenerates Composer files to reflect the new package state.

--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,7 @@
         }
     ],
     "require": {
-        "php": ">=7.2",
-        "prestashop/module-lib-service": "^1.0"
+        "php": ">=7.2"
     },
     "autoload": {
         "psr-4": {
